--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           path: |
             /home/runner/.cache/Cypress
             **/node_modules
-          key: our-cache-yarn-${{ hashFiles('**/yarn.lock.json') }}
+          key: our-cache-yarn-${{ hashFiles('**/yarn.lock') }}
 
   lint:
     needs: cache
@@ -51,7 +51,7 @@ jobs:
           path: |
             /home/runner/.cache/Cypress
             **/node_modules
-          key: our-cache-yarn-${{ hashFiles('**/yarn.lock.json') }}
+          key: our-cache-yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -83,7 +83,7 @@ jobs:
           path: |
             /home/runner/.cache/Cypress
             **/node_modules
-          key: our-cache-yarn-${{ hashFiles('**/yarn.lock.json') }}
+          key: our-cache-yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
